# greenpipe.partners

./: .dockerignore  .gitignore  CNAME  DEPLOYMENT.md  Dockerfile  PANELLOCK_OPERATIONS.md  README.md  astro.config.mjs  django_app.md  greenpipe-website-contract.md  index.html  main.py  manage.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: flux-release-sign.yml
architect/: docs-architecture.md  frontend-architecture.md  hosting-options.md
green_pipe_config/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
organizations/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
organizations/migrations/: 0001_initial.py
panellock/: admin.py  apps.py  catalog.py  device_api.py  forms.py  models.py  pricing.py  storage.py  tests.py  urls.py  views.py  workflow.py
panellock/migrations/: 0001_initial.py  0002_seed_catalog.py  0003_alter_updaterelease_compatibility.py  0004_alter_device_status.py  0005_updatejob_one_active_update_job_per_device.py  0006_alter_updateevent_payload.py  0007_update_panellock_protect.py  0008_add_preexisting_panel_offer.py  0009_add_hardware_specifications.py  0010_update_ignition_conversion_price.py  0011_round_hardware_prices_to_dollars.py  0012_panel_inventory_and_allowances.py  0013_release_attention_due.py  0014_update_edge_panel_license.py  0015_increase_pc_markup.py  0016_reduce_pc_markup_to_thirty.py  (+1 more)
portal/: admin.py  gists.py  models.py  test_agentlab_release.py  tests.py  urls.py  views.py
scripts/: sign_flux_handoff.sh
(+186 files in other folders)
