[project]
name = "1001website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  'boto3',
  'cryptography',
  'django',
  'dj-database-url',
  'gunicorn',
  'psycopg[binary]',
  'stripe',
  'whitenoise',
  "markdown>=3.10.2",
]

[dependency-groups]
dev = []
